Phase 3/Module3.output
Grammar

    0 $accept: Program $end

    1 Program: Class ProgramString OpenBracket field_decls method_decls CloseBracket

    2 field_decls: field_decls field_decl
    3            | /* empty */

    4 field_decl: Type Identifiers SemiColon

    5 Identifiers: Identifier1
    6            | Identifiers Comma Identifier1

    7 Identifier1: Identifier
    8            | Identifier OpenSquare Int_literal CloseSquare

    9 method_decls: method_decl method_decls
   10             | /* empty */

   11 method_decl: Type Identifier OpenParen Params CloseParen Block
   12            | Type Identifier OpenParen CloseParen Block
   13            | Void Identifier OpenParen Params CloseParen Block
   14            | Void Identifier OpenParen CloseParen Block

   15 Params: Type Identifier
   16       | Type Identifier Comma Params

   17 Block: OpenBracket var_decls Statements CloseBracket

   18 var_decls: var_decl var_decls
   19          | /* empty */

   20 var_decl: Type decls SemiColon

   21 decls: Identifier
   22      | Identifier Comma decls

   23 Statements: Statement Statements
   24           | /* empty */

   25 Statement: Location Assign_op Expr SemiColon
   26          | Method_call SemiColon
   27          | If OpenParen Expr CloseParen Block
   28          | If OpenParen Expr CloseParen Block Else Block
   29          | For Identifier Equal Expr Comma Expr Block
   30          | Return SemiColon
   31          | Return Expr SemiColon
   32          | Break SemiColon
   33          | Continue SemiColon
   34          | Block

   35 Method_call: Method_name OpenParen PassParams CloseParen
   36            | Method_name OpenParen CloseParen
   37            | Callout OpenParen String_literal CloseParen
   38            | Callout OpenParen String_literal Comma CalloutArgs CloseParen

   39 PassParams: Expr
   40           | Expr Comma PassParams

   41 Method_name: Identifier

   42 Location: Identifier
   43         | Identifier OpenSquare Expr CloseSquare

   44 CalloutArgs: Expr
   45            | String_literal
   46            | Expr Comma CalloutArgs
   47            | String_literal Comma CalloutArgs

   48 Expr: Location
   49     | Method_call
   50     | Literal
   51     | Expr ConditionalOr Expr
   52     | Expr ConditionalAnd Expr
   53     | Expr EqualTo Expr
   54     | Expr NotEqualTo Expr
   55     | Expr LessThan Expr
   56     | Expr LessThanEqual Expr
   57     | Expr GreaterThanEqual Expr
   58     | Expr GreaterThan Expr
   59     | Expr Addition Expr
   60     | Expr Minus Expr
   61     | Expr Multiplication Expr
   62     | Expr Division Expr
   63     | Expr Remainder Expr
   64     | Minus Expr
   65     | Negation Expr
   66     | OpenParen Expr CloseParen

   67 Literal: Int_literal
   68        | Char_literal
   69        | Bool_literal

   70 Bool_literal: True
   71             | False

   72 Int_literal: Decimal_literal
   73            | Hex_literal

   74 Type: Int
   75     | Boolean

   76 Assign_op: Equal
   77          | PlusEqual
   78          | MinusEqual


Terminals, with rules where they appear

$end (0) 0
error (256)
Class (258) 1
ProgramString (259) 1
Identifier (260) 7 8 11 12 13 14 15 16 21 22 29 41 42 43
OpenBracket (261) 1 17
CloseBracket (262) 1 17
OpenSquare (263) 8 43
CloseSquare (264) 8 43
SemiColon (265) 4 20 25 26 30 31 32 33
OpenParen (266) 11 12 13 14 27 28 35 36 37 38 66
CloseParen (267) 11 12 13 14 27 28 35 36 37 38 66
Comma (268) 6 16 22 29 38 40 46 47
Void (269) 13 14
Break (270) 32
Callout (271) 37 38
Continue (272) 33
Else (273) 28
Return (274) 30 31
Equal (275) 29 76
PlusEqual (276) 77
MinusEqual (277) 78
For (278) 29
If (279) 27 28
Int (280) 74
Boolean (281) 75
Decimal_literal (282) 72
Hex_literal (283) 73
Char_literal (284) 68
String_literal (285) 37 38 45 47
True (286) 70
False (287) 71
ConditionalOr (288) 51
ConditionalAnd (289) 52
NotEqualTo (290) 54
EqualTo (291) 53
GreaterThan (292) 58
GreaterThanEqual (293) 57
LessThanEqual (294) 56
LessThan (295) 55
Minus (296) 60 64
Addition (297) 59
Remainder (298) 63
Division (299) 62
Multiplication (300) 61
Negation (301) 65
UMinus (302)


Nonterminals, with rules where they appear

$accept (48)
    on left: 0
Program (49)
    on left: 1, on right: 0
field_decls (50)
    on left: 2 3, on right: 1 2
field_decl (51)
    on left: 4, on right: 2
Identifiers (52)
    on left: 5 6, on right: 4 6
Identifier1 (53)
    on left: 7 8, on right: 5 6
method_decls (54)
    on left: 9 10, on right: 1 9
method_decl (55)
    on left: 11 12 13 14, on right: 9
Params (56)
    on left: 15 16, on right: 11 13 16
Block (57)
    on left: 17, on right: 11 12 13 14 27 28 29 34
var_decls (58)
    on left: 18 19, on right: 17 18
var_decl (59)
    on left: 20, on right: 18
decls (60)
    on left: 21 22, on right: 20 22
Statements (61)
    on left: 23 24, on right: 17 23
Statement (62)
    on left: 25 26 27 28 29 30 31 32 33 34, on right: 23
Method_call (63)
    on left: 35 36 37 38, on right: 26 49
PassParams (64)
    on left: 39 40, on right: 35 40
Method_name (65)
    on left: 41, on right: 35 36
Location (66)
    on left: 42 43, on right: 25 48
CalloutArgs (67)
    on left: 44 45 46 47, on right: 38 46 47
Expr (68)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66, on right: 25 27 28 29 31 39 40 43 44 46 51 52 53 54 55 56 57
    58 59 60 61 62 63 64 65 66
Literal (69)
    on left: 67 68 69, on right: 50
Bool_literal (70)
    on left: 70 71, on right: 69
Int_literal (71)
    on left: 72 73, on right: 8 67
Type (72)
    on left: 74 75, on right: 4 11 12 15 16 20
Assign_op (73)
    on left: 76 77 78, on right: 25


state 0

    0 $accept: . Program $end

    Class  shift, and go to state 1

    Program  go to state 2


state 1

    1 Program: Class . ProgramString OpenBracket field_decls method_decls CloseBracket

    ProgramString  shift, and go to state 3


state 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


state 3

    1 Program: Class ProgramString . OpenBracket field_decls method_decls CloseBracket

    OpenBracket  shift, and go to state 5


state 4

    0 $accept: Program $end .

    $default  accept


state 5

    1 Program: Class ProgramString OpenBracket . field_decls method_decls CloseBracket

    $default  reduce using rule 3 (field_decls)

    field_decls  go to state 6


state 6

    1 Program: Class ProgramString OpenBracket field_decls . method_decls CloseBracket
    2 field_decls: field_decls . field_decl

    Void     shift, and go to state 7
    Int      shift, and go to state 8
    Boolean  shift, and go to state 9

    $default  reduce using rule 10 (method_decls)

    field_decl    go to state 10
    method_decls  go to state 11
    method_decl   go to state 12
    Type          go to state 13


state 7

   13 method_decl: Void . Identifier OpenParen Params CloseParen Block
   14            | Void . Identifier OpenParen CloseParen Block

    Identifier  shift, and go to state 14


state 8

   74 Type: Int .

    $default  reduce using rule 74 (Type)


state 9

   75 Type: Boolean .

    $default  reduce using rule 75 (Type)


state 10

    2 field_decls: field_decls field_decl .

    $default  reduce using rule 2 (field_decls)


state 11

    1 Program: Class ProgramString OpenBracket field_decls method_decls . CloseBracket

    CloseBracket  shift, and go to state 15


state 12

    9 method_decls: method_decl . method_decls

    Void     shift, and go to state 7
    Int      shift, and go to state 8
    Boolean  shift, and go to state 9

    $default  reduce using rule 10 (method_decls)

    method_decls  go to state 16
    method_decl   go to state 12
    Type          go to state 17


state 13

    4 field_decl: Type . Identifiers SemiColon
   11 method_decl: Type . Identifier OpenParen Params CloseParen Block
   12            | Type . Identifier OpenParen CloseParen Block

    Identifier  shift, and go to state 18

    Identifiers  go to state 19
    Identifier1  go to state 20


state 14

   13 method_decl: Void Identifier . OpenParen Params CloseParen Block
   14            | Void Identifier . OpenParen CloseParen Block

    OpenParen  shift, and go to state 21


state 15

    1 Program: Class ProgramString OpenBracket field_decls method_decls CloseBracket .

    $default  reduce using rule 1 (Program)


state 16

    9 method_decls: method_decl method_decls .

    $default  reduce using rule 9 (method_decls)


state 17

   11 method_decl: Type . Identifier OpenParen Params CloseParen Block
   12            | Type . Identifier OpenParen CloseParen Block

    Identifier  shift, and go to state 22


state 18

    7 Identifier1: Identifier .
    8            | Identifier . OpenSquare Int_literal CloseSquare
   11 method_decl: Type Identifier . OpenParen Params CloseParen Block
   12            | Type Identifier . OpenParen CloseParen Block

    OpenSquare  shift, and go to state 23
    OpenParen   shift, and go to state 24

    $default  reduce using rule 7 (Identifier1)


state 19

    4 field_decl: Type Identifiers . SemiColon
    6 Identifiers: Identifiers . Comma Identifier1

    SemiColon  shift, and go to state 25
    Comma      shift, and go to state 26


state 20

    5 Identifiers: Identifier1 .

    $default  reduce using rule 5 (Identifiers)


state 21

   13 method_decl: Void Identifier OpenParen . Params CloseParen Block
   14            | Void Identifier OpenParen . CloseParen Block

    CloseParen  shift, and go to state 27
    Int         shift, and go to state 8
    Boolean     shift, and go to state 9

    Params  go to state 28
    Type    go to state 29


state 22

   11 method_decl: Type Identifier . OpenParen Params CloseParen Block
   12            | Type Identifier . OpenParen CloseParen Block

    OpenParen  shift, and go to state 24


state 23

    8 Identifier1: Identifier OpenSquare . Int_literal CloseSquare

    Decimal_literal  shift, and go to state 30
    Hex_literal      shift, and go to state 31

    Int_literal  go to state 32


state 24

   11 method_decl: Type Identifier OpenParen . Params CloseParen Block
   12            | Type Identifier OpenParen . CloseParen Block

    CloseParen  shift, and go to state 33
    Int         shift, and go to state 8
    Boolean     shift, and go to state 9

    Params  go to state 34
    Type    go to state 29


state 25

    4 field_decl: Type Identifiers SemiColon .

    $default  reduce using rule 4 (field_decl)


state 26

    6 Identifiers: Identifiers Comma . Identifier1

    Identifier  shift, and go to state 35

    Identifier1  go to state 36


state 27

   14 method_decl: Void Identifier OpenParen CloseParen . Block

    OpenBracket  shift, and go to state 37

    Block  go to state 38


state 28

   13 method_decl: Void Identifier OpenParen Params . CloseParen Block

    CloseParen  shift, and go to state 39


state 29

   15 Params: Type . Identifier
   16       | Type . Identifier Comma Params

    Identifier  shift, and go to state 40


state 30

   72 Int_literal: Decimal_literal .

    $default  reduce using rule 72 (Int_literal)


state 31

   73 Int_literal: Hex_literal .

    $default  reduce using rule 73 (Int_literal)


state 32

    8 Identifier1: Identifier OpenSquare Int_literal . CloseSquare

    CloseSquare  shift, and go to state 41


state 33

   12 method_decl: Type Identifier OpenParen CloseParen . Block

    OpenBracket  shift, and go to state 37

    Block  go to state 42


state 34

   11 method_decl: Type Identifier OpenParen Params . CloseParen Block

    CloseParen  shift, and go to state 43


state 35

    7 Identifier1: Identifier .
    8            | Identifier . OpenSquare Int_literal CloseSquare

    OpenSquare  shift, and go to state 23

    $default  reduce using rule 7 (Identifier1)


state 36

    6 Identifiers: Identifiers Comma Identifier1 .

    $default  reduce using rule 6 (Identifiers)


state 37

   17 Block: OpenBracket . var_decls Statements CloseBracket

    Int      shift, and go to state 8
    Boolean  shift, and go to state 9

    $default  reduce using rule 19 (var_decls)

    var_decls  go to state 44
    var_decl   go to state 45
    Type       go to state 46


state 38

   14 method_decl: Void Identifier OpenParen CloseParen Block .

    $default  reduce using rule 14 (method_decl)


state 39

   13 method_decl: Void Identifier OpenParen Params CloseParen . Block

    OpenBracket  shift, and go to state 37

    Block  go to state 47


state 40

   15 Params: Type Identifier .
   16       | Type Identifier . Comma Params

    Comma  shift, and go to state 48

    $default  reduce using rule 15 (Params)


state 41

    8 Identifier1: Identifier OpenSquare Int_literal CloseSquare .

    $default  reduce using rule 8 (Identifier1)


state 42

   12 method_decl: Type Identifier OpenParen CloseParen Block .

    $default  reduce using rule 12 (method_decl)


state 43

   11 method_decl: Type Identifier OpenParen Params CloseParen . Block

    OpenBracket  shift, and go to state 37

    Block  go to state 49


state 44

   17 Block: OpenBracket var_decls . Statements CloseBracket

    Identifier   shift, and go to state 50
    OpenBracket  shift, and go to state 37
    Break        shift, and go to state 51
    Callout      shift, and go to state 52
    Continue     shift, and go to state 53
    Return       shift, and go to state 54
    For          shift, and go to state 55
    If           shift, and go to state 56

    $default  reduce using rule 24 (Statements)

    Block        go to state 57
    Statements   go to state 58
    Statement    go to state 59
    Method_call  go to state 60
    Method_name  go to state 61
    Location     go to state 62


state 45

   18 var_decls: var_decl . var_decls

    Int      shift, and go to state 8
    Boolean  shift, and go to state 9

    $default  reduce using rule 19 (var_decls)

    var_decls  go to state 63
    var_decl   go to state 45
    Type       go to state 46


state 46

   20 var_decl: Type . decls SemiColon

    Identifier  shift, and go to state 64

    decls  go to state 65


state 47

   13 method_decl: Void Identifier OpenParen Params CloseParen Block .

    $default  reduce using rule 13 (method_decl)


state 48

   16 Params: Type Identifier Comma . Params

    Int      shift, and go to state 8
    Boolean  shift, and go to state 9

    Params  go to state 66
    Type    go to state 29


state 49

   11 method_decl: Type Identifier OpenParen Params CloseParen Block .

    $default  reduce using rule 11 (method_decl)


state 50

   41 Method_name: Identifier .
   42 Location: Identifier .
   43         | Identifier . OpenSquare Expr CloseSquare

    OpenSquare  shift, and go to state 67

    OpenParen  reduce using rule 41 (Method_name)
    $default   reduce using rule 42 (Location)


state 51

   32 Statement: Break . SemiColon

    SemiColon  shift, and go to state 68


state 52

   37 Method_call: Callout . OpenParen String_literal CloseParen
   38            | Callout . OpenParen String_literal Comma CalloutArgs CloseParen

    OpenParen  shift, and go to state 69


state 53

   33 Statement: Continue . SemiColon

    SemiColon  shift, and go to state 70


state 54

   30 Statement: Return . SemiColon
   31          | Return . Expr SemiColon

    Identifier       shift, and go to state 50
    SemiColon        shift, and go to state 71
    OpenParen        shift, and go to state 72
    Callout          shift, and go to state 52
    Decimal_literal  shift, and go to state 30
    Hex_literal      shift, and go to state 31
    Char_literal     shift, and go to state 73
    True             shift, and go to state 74
    False            shift, and go to state 75
    Minus            shift, and go to state 76
    Negation         shift, and go to state 77

    Method_call   go to state 78
    Method_name   go to state 61
    Location      go to state 79
    Expr          go to state 80
    Literal       go to state 81
    Bool_literal  go to state 82
    Int_literal   go to state 83


state 55

   29 Statement: For . Identifier Equal Expr Comma Expr Block

    Identifier  shift, and go to state 84


state 56

   27 Statement: If . OpenParen Expr CloseParen Block
   28          | If . OpenParen Expr CloseParen Block Else Block

    OpenParen  shift, and go to state 85


state 57

   34 Statement: Block .

    $default  reduce using rule 34 (Statement)


state 58

   17 Block: OpenBracket var_decls Statements . CloseBracket

    CloseBracket  shift, and go to state 86


state 59

   23 Statements: Statement . Statements

    Identifier   shift, and go to state 50
    OpenBracket  shift, and go to state 37
    Break        shift, and go to state 51
    Callout      shift, and go to state 52
    Continue     shift, and go to state 53
    Return       shift, and go to state 54
    For          shift, and go to state 55
    If           shift, and go to state 56

    $default  reduce using rule 24 (Statements)

    Block        go to state 57
    Statements   go to state 87
    Statement    go to state 59
    Method_call  go to state 60
    Method_name  go to state 61
    Location     go to state 62


state 60

   26 Statement: Method_call . SemiColon

    SemiColon  shift, and go to state 88


state 61

   35 Method_call: Method_name . OpenParen PassParams CloseParen
   36            | Method_name . OpenParen CloseParen

    OpenParen  shift, and go to state 89


state 62

   25 Statement: Location . Assign_op Expr SemiColon

    Equal       shift, and go to state 90
    PlusEqual   shift, and go to state 91
    MinusEqual  shift, and go to state 92

    Assign_op  go to state 93


state 63

   18 var_decls: var_decl var_decls .

    $default  reduce using rule 18 (var_decls)


state 64

   21 decls: Identifier .
   22      | Identifier . Comma decls

    Comma  shift, and go to state 94

    $default  reduce using rule 21 (decls)


state 65

   20 var_decl: Type decls . SemiColon

    SemiColon  shift, and go to state 95


state 66

   16 Params: Type Identifier Comma Params .

    $default  reduce using rule 16 (Params)


state 67

   43 Location: Identifier OpenSquare . Expr CloseSquare

    Identifier       shift, and go to state 50
    OpenParen        shift, and go to state 72
    Callout          shift, and go to state 52
    Decimal_literal  shift, and go to state 30
    Hex_literal      shift, and go to state 31
    Char_literal     shift, and go to state 73
    True             shift, and go to state 74
    False            shift, and go to state 75
    Minus            shift, and go to state 76
    Negation         shift, and go to state 77

    Method_call   go to state 78
    Method_name   go to state 61
    Location      go to state 79
    Expr          go to state 96
    Literal       go to state 81
    Bool_literal  go to state 82
    Int_literal   go to state 83


state 68

   32 Statement: Break SemiColon .

    $default  reduce using rule 32 (Statement)


state 69

   37 Method_call: Callout OpenParen . String_literal CloseParen
   38            | Callout OpenParen . String_literal Comma CalloutArgs CloseParen

    String_literal  shift, and go to state 97


state 70

   33 Statement: Continue SemiColon .

    $default  reduce using rule 33 (Statement)


state 71

   30 Statement: Return SemiColon .

    $default  reduce using rule 30 (Statement)


state 72

   66 Expr: OpenParen . Expr CloseParen

    Identifier       shift, and go to state 50
    OpenParen        shift, and go to state 72
    Callout          shift, and go to state 52
    Decimal_literal  shift, and go to state 30
    Hex_literal      shift, and go to state 31
    Char_literal     shift, and go to state 73
    True             shift, and go to state 74
    False            shift, and go to state 75
    Minus            shift, and go to state 76
    Negation         shift, and go to state 77

    Method_call   go to state 78
    Method_name   go to state 61
    Location      go to state 79
    Expr          go to state 98
    Literal       go to state 81
    Bool_literal  go to state 82
    Int_literal   go to state 83


state 73

   68 Literal: Char_literal .

    $default  reduce using rule 68 (Literal)


state 74

   70 Bool_literal: True .

    $default  reduce using rule 70 (Bool_literal)


state 75

   71 Bool_literal: False .

    $default  reduce using rule 71 (Bool_literal)


state 76

   64 Expr: Minus . Expr

    Identifier       shift, and go to state 50
    OpenParen        shift, and go to state 72
    Callout          shift, and go to state 52
    Decimal_literal  shift, and go to state 30
    Hex_literal      shift, and go to state 31
    Char_literal     shift, and go to state 73
    True             shift, and go to state 74
    False            shift, and go to state 75
    Minus            shift, and go to state 76
    Negation         shift, and go to state 77

    Method_call   go to state 78
    Method_name   go to state 61
    Location      go to state 79
    Expr          go to state 99
    Literal       go to state 81
    Bool_literal  go to state 82
    Int_literal   go to state 83


state 77

   65 Expr: Negation . Expr

    Identifier       shift, and go to state 50
    OpenParen        shift, and go to state 72
    Callout          shift, and go to state 52
    Decimal_literal  shift, and go to state 30
    Hex_literal      shift, and go to state 31
    Char_literal     shift, and go to state 73
    True             shift, and go to state 74
    False            shift, and go to state 75
    Minus            shift, and go to state 76
    Negation         shift, and go to state 77

    Method_call   go to state 78
    Method_name   go to state 61
    Location      go to state 79
    Expr          go to state 100
    Literal       go to state 81
    Bool_literal  go to state 82
    Int_literal   go to state 83


state 78

   49 Expr: Method_call .

    $default  reduce using rule 49 (Expr)


state 79

   48 Expr: Location .

    $default  reduce using rule 48 (Expr)


state 80

   31 Statement: Return Expr . SemiColon
   51 Expr: Expr . ConditionalOr Expr
   52     | Expr . ConditionalAnd Expr
   53     | Expr . EqualTo Expr
   54     | Expr . NotEqualTo Expr
   55     | Expr . LessThan Expr
   56     | Expr . LessThanEqual Expr
   57     | Expr . GreaterThanEqual Expr
   58     | Expr . GreaterThan Expr
   59     | Expr . Addition Expr
   60     | Expr . Minus Expr
   61     | Expr . Multiplication Expr
   62     | Expr . Division Expr
   63     | Expr . Remainder Expr

    SemiColon         shift, and go to state 101
    ConditionalOr     shift, and go to state 102
    ConditionalAnd    shift, and go to state 103
    NotEqualTo        shift, and go to state 104
    EqualTo           shift, and go to state 105
    GreaterThan       shift, and go to state 106
    GreaterThanEqual  shift, and go to state 107
    LessThanEqual     shift, and go to state 108
    LessThan          shift, and go to state 109
    Minus             shift, and go to state 110
    Addition          shift, and go to state 111
    Remainder         shift, and go to state 112
    Division          shift, and go to state 113
    Multiplication    shift, and go to state 114


state 81

   50 Expr: Literal .

    $default  reduce using rule 50 (Expr)


state 82

   69 Literal: Bool_literal .

    $default  reduce using rule 69 (Literal)


state 83

   67 Literal: Int_literal .

    $default  reduce using rule 67 (Literal)


state 84

   29 Statement: For Identifier . Equal Expr Comma Expr Block

    Equal  shift, and go to state 115


state 85

   27 Statement: If OpenParen . Expr CloseParen Block
   28          | If OpenParen . Expr CloseParen Block Else Block

    Identifier       shift, and go to state 50
    OpenParen        shift, and go to state 72
    Callout          shift, and go to state 52
    Decimal_literal  shift, and go to state 30
    Hex_literal      shift, and go to state 31
    Char_literal     shift, and go to state 73
    True             shift, and go to state 74
    False            shift, and go to state 75
    Minus            shift, and go to state 76
    Negation         shift, and go to state 77

    Method_call   go to state 78
    Method_name   go to state 61
    Location      go to state 79
    Expr          go to state 116
    Literal       go to state 81
    Bool_literal  go to state 82
    Int_literal   go to state 83


state 86

   17 Block: OpenBracket var_decls Statements CloseBracket .

    $default  reduce using rule 17 (Block)


state 87

   23 Statements: Statement Statements .

    $default  reduce using rule 23 (Statements)


state 88

   26 Statement: Method_call SemiColon .

    $default  reduce using rule 26 (Statement)


state 89

   35 Method_call: Method_name OpenParen . PassParams CloseParen
   36            | Method_name OpenParen . CloseParen

    Identifier       shift, and go to state 50
    OpenParen        shift, and go to state 72
    CloseParen       shift, and go to state 117
    Callout          shift, and go to state 52
    Decimal_literal  shift, and go to state 30
    Hex_literal      shift, and go to state 31
    Char_literal     shift, and go to state 73
    True             shift, and go to state 74
    False            shift, and go to state 75
    Minus            shift, and go to state 76
    Negation         shift, and go to state 77

    Method_call   go to state 78
    PassParams    go to state 118
    Method_name   go to state 61
    Location      go to state 79
    Expr          go to state 119
    Literal       go to state 81
    Bool_literal  go to state 82
    Int_literal   go to state 83


state 90

   76 Assign_op: Equal .

    $default  reduce using rule 76 (Assign_op)


state 91

   77 Assign_op: PlusEqual .

    $default  reduce using rule 77 (Assign_op)


state 92

   78 Assign_op: MinusEqual .

    $default  reduce using rule 78 (Assign_op)


state 93

   25 Statement: Location Assign_op . Expr SemiColon

    Identifier       shift, and go to state 50
    OpenParen        shift, and go to state 72
    Callout          shift, and go to state 52
    Decimal_literal  shift, and go to state 30
    Hex_literal      shift, and go to state 31
    Char_literal     shift, and go to state 73
    True             shift, and go to state 74
    False            shift, and go to state 75
    Minus            shift, and go to state 76
    Negation         shift, and go to state 77

    Method_call   go to state 78
    Method_name   go to state 61
    Location      go to state 79
    Expr          go to state 120
    Literal       go to state 81
    Bool_literal  go to state 82
    Int_literal   go to state 83


state 94

   22 decls: Identifier Comma . decls

    Identifier  shift, and go to state 64

    decls  go to state 121


state 95

   20 var_decl: Type decls SemiColon .

    $default  reduce using rule 20 (var_decl)


state 96

   43 Location: Identifier OpenSquare Expr . CloseSquare
   51 Expr: Expr . ConditionalOr Expr
   52     | Expr . ConditionalAnd Expr
   53     | Expr . EqualTo Expr
   54     | Expr . NotEqualTo Expr
   55     | Expr . LessThan Expr
   56     | Expr . LessThanEqual Expr
   57     | Expr . GreaterThanEqual Expr
   58     | Expr . GreaterThan Expr
   59     | Expr . Addition Expr
   60     | Expr . Minus Expr
   61     | Expr . Multiplication Expr
   62     | Expr . Division Expr
   63     | Expr . Remainder Expr

    CloseSquare       shift, and go to state 122
    ConditionalOr     shift, and go to state 102
    ConditionalAnd    shift, and go to state 103
    NotEqualTo        shift, and go to state 104
    EqualTo           shift, and go to state 105
    GreaterThan       shift, and go to state 106
    GreaterThanEqual  shift, and go to state 107
    LessThanEqual     shift, and go to state 108
    LessThan          shift, and go to state 109
    Minus             shift, and go to state 110
    Addition          shift, and go to state 111
    Remainder         shift, and go to state 112
    Division          shift, and go to state 113
    Multiplication    shift, and go to state 114


state 97

   37 Method_call: Callout OpenParen String_literal . CloseParen
   38            | Callout OpenParen String_literal . Comma CalloutArgs CloseParen

    CloseParen  shift, and go to state 123
    Comma       shift, and go to state 124


state 98

   51 Expr: Expr . ConditionalOr Expr
   52     | Expr . ConditionalAnd Expr
   53     | Expr . EqualTo Expr
   54     | Expr . NotEqualTo Expr
   55     | Expr . LessThan Expr
   56     | Expr . LessThanEqual Expr
   57     | Expr . GreaterThanEqual Expr
   58     | Expr . GreaterThan Expr
   59     | Expr . Addition Expr
   60     | Expr . Minus Expr
   61     | Expr . Multiplication Expr
   62     | Expr . Division Expr
   63     | Expr . Remainder Expr
   66     | OpenParen Expr . CloseParen

    CloseParen        shift, and go to state 125
    ConditionalOr     shift, and go to state 102
    ConditionalAnd    shift, and go to state 103
    NotEqualTo        shift, and go to state 104
    EqualTo           shift, and go to state 105
    GreaterThan       shift, and go to state 106
    GreaterThanEqual  shift, and go to state 107
    LessThanEqual     shift, and go to state 108
    LessThan          shift, and go to state 109
    Minus             shift, and go to state 110
    Addition          shift, and go to state 111
    Remainder         shift, and go to state 112
    Division          shift, and go to state 113
    Multiplication    shift, and go to state 114


state 99

   51 Expr: Expr . ConditionalOr Expr
   52     | Expr . ConditionalAnd Expr
   53     | Expr . EqualTo Expr
   54     | Expr . NotEqualTo Expr
   55     | Expr . LessThan Expr
   56     | Expr . LessThanEqual Expr
   57     | Expr . GreaterThanEqual Expr
   58     | Expr . GreaterThan Expr
   59     | Expr . Addition Expr
   60     | Expr . Minus Expr
   61     | Expr . Multiplication Expr
   62     | Expr . Division Expr
   63     | Expr . Remainder Expr
   64     | Minus Expr .

    $default  reduce using rule 64 (Expr)


state 100

   51 Expr: Expr . ConditionalOr Expr
   52     | Expr . ConditionalAnd Expr
   53     | Expr . EqualTo Expr
   54     | Expr . NotEqualTo Expr
   55     | Expr . LessThan Expr
   56     | Expr . LessThanEqual Expr
   57     | Expr . GreaterThanEqual Expr
   58     | Expr . GreaterThan Expr
   59     | Expr . Addition Expr
   60     | Expr . Minus Expr
   61     | Expr . Multiplication Expr
   62     | Expr . Division Expr
   63     | Expr . Remainder Expr
   65     | Negation Expr .

    $default  reduce using rule 65 (Expr)


state 101

   31 Statement: Return Expr SemiColon .

    $default  reduce using rule 31 (Statement)


state 102

   51 Expr: Expr ConditionalOr . Expr

    Identifier       shift, and go to state 50
    OpenParen        shift, and go to state 72
    Callout          shift, and go to state 52
    Decimal_literal  shift, and go to state 30
    Hex_literal      shift, and go to state 31
    Char_literal     shift, and go to state 73
    True             shift, and go to state 74
    False            shift, and go to state 75
    Minus            shift, and go to state 76
    Negation         shift, and go to state 77

    Method_call   go to state 78
    Method_name   go to state 61
    Location      go to state 79
    Expr          go to state 126
    Literal       go to state 81
    Bool_literal  go to state 82
    Int_literal   go to state 83


state 103

   52 Expr: Expr ConditionalAnd . Expr

    Identifier       shift, and go to state 50
    OpenParen        shift, and go to state 72
    Callout          shift, and go to state 52
    Decimal_literal  shift, and go to state 30
    Hex_literal      shift, and go to state 31
    Char_literal     shift, and go to state 73
    True             shift, and go to state 74
    False            shift, and go to state 75
    Minus            shift, and go to state 76
    Negation         shift, and go to state 77

    Method_call   go to state 78
    Method_name   go to state 61
    Location      go to state 79
    Expr          go to state 127
    Literal       go to state 81
    Bool_literal  go to state 82
    Int_literal   go to state 83


state 104

   54 Expr: Expr NotEqualTo . Expr

    Identifier       shift, and go to state 50
    OpenParen        shift, and go to state 72
    Callout          shift, and go to state 52
    Decimal_literal  shift, and go to state 30
    Hex_literal      shift, and go to state 31
    Char_literal     shift, and go to state 73
    True             shift, and go to state 74
    False            shift, and go to state 75
    Minus            shift, and go to state 76
    Negation         shift, and go to state 77

    Method_call   go to state 78
    Method_name   go to state 61
    Location      go to state 79
    Expr          go to state 128
    Literal       go to state 81
    Bool_literal  go to state 82
    Int_literal   go to state 83


state 105

   53 Expr: Expr EqualTo . Expr

    Identifier       shift, and go to state 50
    OpenParen        shift, and go to state 72
    Callout          shift, and go to state 52
    Decimal_literal  shift, and go to state 30
    Hex_literal      shift, and go to state 31
    Char_literal     shift, and go to state 73
    True             shift, and go to state 74
    False            shift, and go to state 75
    Minus            shift, and go to state 76
    Negation         shift, and go to state 77

    Method_call   go to state 78
    Method_name   go to state 61
    Location      go to state 79
    Expr          go to state 129
    Literal       go to state 81
    Bool_literal  go to state 82
    Int_literal   go to state 83


state 106

   58 Expr: Expr GreaterThan . Expr

    Identifier       shift, and go to state 50
    OpenParen        shift, and go to state 72
    Callout          shift, and go to state 52
    Decimal_literal  shift, and go to state 30
    Hex_literal      shift, and go to state 31
    Char_literal     shift, and go to state 73
    True             shift, and go to state 74
    False            shift, and go to state 75
    Minus            shift, and go to state 76
    Negation         shift, and go to state 77

    Method_call   go to state 78
    Method_name   go to state 61
    Location      go to state 79
    Expr          go to state 130
    Literal       go to state 81
    Bool_literal  go to state 82
    Int_literal   go to state 83


state 107

   57 Expr: Expr GreaterThanEqual . Expr

    Identifier       shift, and go to state 50
    OpenParen        shift, and go to state 72
    Callout          shift, and go to state 52
    Decimal_literal  shift, and go to state 30
    Hex_literal      shift, and go to state 31
    Char_literal     shift, and go to state 73
    True             shift, and go to state 74
    False            shift, and go to state 75
    Minus            shift, and go to state 76
    Negation         shift, and go to state 77

    Method_call   go to state 78
    Method_name   go to state 61
    Location      go to state 79
    Expr          go to state 131
    Literal       go to state 81
    Bool_literal  go to state 82
    Int_literal   go to state 83


state 108

   56 Expr: Expr LessThanEqual . Expr

    Identifier       shift, and go to state 50
    OpenParen        shift, and go to state 72
    Callout          shift, and go to state 52
    Decimal_literal  shift, and go to state 30
    Hex_literal      shift, and go to state 31
    Char_literal     shift, and go to state 73
    True             shift, and go to state 74
    False            shift, and go to state 75
    Minus            shift, and go to state 76
    Negation         shift, and go to state 77

    Method_call   go to state 78
    Method_name   go to state 61
    Location      go to state 79
    Expr          go to state 132
    Literal       go to state 81
    Bool_literal  go to state 82
    Int_literal   go to state 83


state 109

   55 Expr: Expr LessThan . Expr

    Identifier       shift, and go to state 50
    OpenParen        shift, and go to state 72
    Callout          shift, and go to state 52
    Decimal_literal  shift, and go to state 30
    Hex_literal      shift, and go to state 31
    Char_literal     shift, and go to state 73
    True             shift, and go to state 74
    False            shift, and go to state 75
    Minus            shift, and go to state 76
    Negation         shift, and go to state 77

    Method_call   go to state 78
    Method_name   go to state 61
    Location      go to state 79
    Expr          go to state 133
    Literal       go to state 81
    Bool_literal  go to state 82
    Int_literal   go to state 83


state 110

   60 Expr: Expr Minus . Expr
